tdf#159101 sw: Fix space appearing at start of line when field wraps

Adding the ' ' to ScanPortionEnd fails pretty quickly with infinite
loop.

The important part of fixing the forum-mso-en-13115.docx was that the
SetHasFollow(true) condition is not affected by a ' '.

(regression from commit 21473f46fda5f1c7f220493667a96fff7c78a7b3)

Change-Id: I6452673c0fe05ca549b63a398a977fc71db64bae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/162167
Tested-by: Jenkins
Reviewed-by: Matthew Kogan <matthew@epoq.co.uk>
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>